--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -18,4 +18,14 @@ nav{
 #img-group img{
     border-radius: 7px;
 }
+.info-card-group{
+    background: whitesmoke;
+}
+.info-card{
+    margin:10px;
+}
+#still-image{
+    background: url("../images/yoga.jpg") no-repeat fixed;
+    height:60%;
+}
 
