--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -8,7 +8,7 @@ nav{
     padding:0 !important;
 }
 #logo{
-    margin:10px;
+    margin:0;
 }
 
 #theme{
@@ -38,8 +38,8 @@ nav{
 }
 
 #connect img{
-    height:60px;
-    width:60px;
+    height:40px;
+    width:40px;
     margin:3vh;
     filter: grayscale(90%);
 }
