--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -6,10 +6,11 @@ html, body{
 }
 nav{
     padding:0 !important;
+    background: #ffc728;
 }
 
 #logo{
-    margin:0;
+    margin:2px;
 }
 
 .nav-link:focus{
@@ -57,5 +58,77 @@ nav{
 #footer{
     height:80%;
     background: #292929;
-
 }
+
+#who-can-join{
+    background: lightskyblue;
+    padding:3vh;
+}
+#blog{
+    position: relative;
+    box-sizing: border-box;
+    padding: 3vh;
+    margin-top: 100px;
+    background: #00ab6c;
+}
+#blog::before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(-3deg);
+}
+#what-we-do{
+    position: relative;
+    box-sizing: border-box;
+    padding: 5vh;
+    margin-bottom: 200px;
+    background: plum;
+    color: #fff;
+}
+
+#what-we-do::after{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(8deg);
+}
+#who-can-join{
+    position: relative;
+    box-sizing: border-box;
+    margin-bottom: 150px;
+    color: #fff;
+}
+
+#who-can-join::after{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(4deg);
+}
+
+
+
