--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -109,7 +109,7 @@ nav{
     padding: 3vh;
     margin-top: 100px;
     margin-bottom: 100px;
-    background: #93dbb3;
+    background: #DE5324;
 }
 #blog::before{
     position: absolute;
