--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -102,7 +102,16 @@ nav{
         margin-left:25px;
     }
 }
-
+#img-group img{
+    transform: scale(1.0);
+    transition: transform 500ms , box-shadow 300ms;
+    box-shadow: 1px 1px 1px 1px rgba(255,255,255,0.4);
+}
+#img-group img:hover{
+    transform: scale(1.2);
+    box-shadow: 2px 2px 2px 1px  rgba(255,255,255,0.4);
+    transition: transform 1s , box-shadow 300ms ;
+}
 #blog{
     position: relative;
     box-sizing: border-box;
