--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -51,10 +51,9 @@ nav{
 #still-image{
     background: url("../images/yoga.jpg") no-repeat fixed center;
     background-size: cover;
-    height:80%;
+    height:66%;
 }
-
-#who-can-join p{
+#who-can-join-page p{
     border-top: rgba(120,150,130,0.5) solid 2px;
     padding:3vh;
 }
@@ -162,7 +161,7 @@ nav{
 #what-we-do p{
     color: rgba(255,255,255,0.6);
 }
-#who-can-join{
+#who-can-join-page{
     position: relative;
     box-sizing: border-box;
     margin-bottom: 150px;
@@ -170,7 +169,7 @@ nav{
     padding:3vh;
 }
 
-#who-can-join::after{
+#who-can-join-page::after{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -197,6 +196,30 @@ nav{
     position: absolute;
     top:50%;
     left:50%;
+}
+#who-can-join-us::after{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(4deg);
+}
+#who-can-join-us{
+    background: #1d252c;
+    position: relative;
+    box-sizing: border-box;
+    margin-bottom: 150px;
+    padding:3vh;
+}
+.left-box{
+    border-right:1px solid rgba(255,255,255,0.05) ;
 }
 
 
