--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -57,12 +57,8 @@ nav{
     border-top: rgba(120,150,130,0.5) solid 2px;
     padding:3vh;
 }
-#blog{
-    height: 80%;
-    background:#f8f8f8;
-}
 #connect{
-    background: #1d252c;
+    background:#13181d;
     padding:3vh;
     position: relative;
     box-sizing: border-box;
@@ -111,43 +107,44 @@ nav{
     box-shadow: 2px 2px 2px 1px  rgba(255,255,255,0.4);
     transition: transform 1s , box-shadow 300ms ;
 }
-#blog{
-    position: relative;
-    box-sizing: border-box;
-    padding: 3vh;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    background: #DE5324;
-}
-#blog::before{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    content: '';
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform-origin: top left;
-    transform: skewY(-6deg);
-}
+/*#blog{*/
+    /*position: relative;*/
+    /*box-sizing: border-box;*/
+    /*padding: 3vh;*/
+    /*margin-top: 100px;*/
+    /*margin-bottom: 100px;*/
+    /*background: #DE5324;*/
+    /*height: 80%;*/
+/*}*/
+/*#blog::before{*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*content: '';*/
+    /*background: inherit;*/
+    /*z-index: -1;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*transform-origin: top left;*/
+    /*transform: skewY(-6deg);*/
+/*}*/
 
-#blog::after{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    content: '';
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform-origin: bottom left;
-    transform: skewY(6deg);
-}
+/*#blog::after{*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*content: '';*/
+    /*background: inherit;*/
+    /*z-index: -1;*/
+    /*top: 0;*/
+    /*right: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*transform-origin: bottom left;*/
+    /*transform: skewY(6deg);*/
+/*}*/
 
 #what-we-do{
     position: relative;
