--- a/assets/css/customStyles.css
+++ b/assets/css/customStyles.css
@@ -192,7 +192,7 @@ nav{
     top:0;
     left:0;
     z-index:9999;
-    background:#5ac88b;
+    background:#4D2638;
 }
 #preload .loader{
     position: absolute;
